[Präsentation] Finale Anpassungen

--- a/Praesentation/praesentation.tex
+++ b/Praesentation/praesentation.tex
@@ -433,7 +433,7 @@
 			Die Zellen der stabilen Partition $\mathcal{P}_G$ eines CR-Graphen erfüllen folgende Eigenschaften:
 			
 			\begin{enumerate}[label=(\Alph*)]
-				\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein leerer Graph, vollständiger Graph, Matching-Graph $mK_2$, das Komplement eines Matching Graphen oder der 5-Kreis.
+				\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein \alert{leerer Graph}, \alert{vollständiger Graph}, \alert{Matching-Graph} $mK_2$, das \alert{Komplement eines Matching Graphen} oder der \alert{5-Kreis}.
 			\end{enumerate}
 		\end{Lemma}
 	\end{frame}
@@ -537,9 +537,9 @@
 			Die Zellen der stabilen Partition $\mathcal{P}_G$ eines CR-Graphen erfüllen folgende Eigenschaften:
 			
 			\begin{enumerate}[label=(\Alph*)]
-				\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein leerer Graph, vollständiger Graph, Matching-Graph $mK_2$, das Komplement eines Matching Graphen oder der 5-Kreis.
+				\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein \alert{leerer Graph}, \alert{vollständiger Graph}, \alert{Matching-Graph} $mK_2$, das \alert{Komplement eines Matching Graphen} oder der \alert{5-Kreis}.
 				\pause
-				\item Für beliebige Zellen $X,Y\in \mathcal{P}_G$ ist $G[X,Y]$ ein leerer Graph, vollständiger bipartiter Graph, eine disjunkte Vereinigung von Sternen $sK_{1,t}$, bei der $X$ die Menge der $s$ inneren Knoten und $Y$ die Menge der $st$ Blätter ist, oder das bipartite Komplement des zuletzt genannten Graphen.
+				\item Für beliebige Zellen $X,Y\in \mathcal{P}_G$ ist $G[X,Y]$ ein \alert{leerer Graph}, \alert{vollständiger bipartiter Graph}, eine \alert{disjunkte Vereinigung von Sternen} $sK_{1,t}$, bei der $X$ die Menge der $s$ inneren Knoten und $Y$ die Menge der $st$ Blätter ist, oder das \alert{bipartite Komplement des zuletzt genannten Graphen}.
 			\end{enumerate}
 		\end{Lemma}
 	\end{frame}
@@ -669,8 +669,8 @@
 			Die Zellen der stabilen Partition $\mathcal{P}_G$ eines CR-Graphen erfüllen folgende Eigenschaften:
 			
 			\begin{enumerate}[label=(\Alph*)]
-				\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein leerer Graph, vollständiger Graph, Matching-Graph $mK_2$, das Komplement eines Matching Graphen oder der 5-Kreis.
-				\item Für beliebige Zellen $X,Y\in \mathcal{P}_G$ ist $G[X,Y]$ ein leerer Graph, vollständiger bipartiter Graph, eine disjunkte Vereinigung von Sternen $sK_{1,t}$, bei der $X$ die Menge der $s$ inneren Knoten und $Y$ die Menge der $st$ Blätter ist, oder das bipartite Komplement des zuletzt genannten Graphen.
+				\item Für beliebige Zellen $X\in \mathcal{P}_G$ ist $G[X]$ ein \alert{leerer Graph}, \alert{vollständiger Graph}, \alert{Matching-Graph} $mK_2$, das \alert{Komplement eines Matching Graphen} oder der \alert{5-Kreis}.
+				\item Für beliebige Zellen $X,Y\in \mathcal{P}_G$ ist $G[X,Y]$ ein \alert{leerer Graph}, \alert{vollständiger bipartiter Graph}, eine \alert{disjunkte Vereinigung von Sternen} $sK_{1,t}$, bei der $X$ die Menge der $s$ inneren Knoten und $Y$ die Menge der $st$ Blätter ist, oder das \alert{bipartite Komplement des zuletzt genannten Graphen}.
 			\end{enumerate}
 		\end{Lemma}
 	\end{frame}
@@ -679,7 +679,7 @@
 	\begin{frame}{Zellgraph}
 		\begin{Definition}
 			Der Zellgraph $C(G)$ eines Graphen $G$ wird aus dessen stabilen Partition $\mathcal{P}_G$ gebildet.
-			Es handelt sich dabei um einen vollständigen Graphen, bei dem die Knoten die Zellen von $\mathcal{P}_G$ darstellen.
+			Dabei gibt es für jede Zelle von $\mathcal{P}_G$ einen Knoten.
 		\end{Definition}
 	\end{frame}
 	\begin{frame}{Zellgraph - Beispiel}
